[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "needleman-wunsch"
version = "0.1.0"
authors = [
  { name="Sara Lichtarge", email="sara.lichtarge@ucsf.edu" },
]
description = "A project implementing Needleman-Wunsch with Gotoh's Algorithm"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pytest",
    "numpy"
]

[tool.setuptools]
packages = ["align"]